--- a/haproxy.cfg.j2
+++ b/haproxy.cfg.j2
@@ -25,5 +25,7 @@ backend app-servers
     mode http
     balance roundrobin
     option forwardfor
-    server app1 {{ hostvars[host].inventory_hostname }}:8080 cookie app1 check
-    server app2 {{ hostvars[host].inventory_hostname }}:8080 cookie app2 check
+    
+ {% for server in group.apps %}
+    server {{ server.split('.') [0].   }}  {{server}}:8080 cookie {{ server.split('.') [1] }} 
+ {% endfor %}
