--- a/haproxy.cfg.j2
+++ b/haproxy.cfg.j2
@@ -26,6 +26,6 @@ backend app-servers
     balance roundrobin
     option forwardfor
     
- {% for server in group.apps %}
-    server {{ server.split('.') [0].   }}  {{server}}:8080 cookie {{ server.split('.') [1] }} 
+ {% for server in groups.apps %}
+    server {{ server.split('.') [0].}}  {{server}}:8080 cookie {{ server.split('.') [0] check}} 
  {% endfor %}
